This change takes out the loading of the Flash bundle from chrome_content_client.cc on all platforms except Linux and ChromeOS, in preparation for removing Flash from the installation bundle on Windows and Mac. This should not result in any user-visible behavior changes, as the component updater will load the bundled component on Windows and Mac.

The change to the component installer is necessary to not remove command-line specified pepper plugins - see the bug for details.

BUG=628320
TEST=https://docs.google.com/document/d/1iTQiaqjuHsKV4cPqSOet-eJKWb2SsJLp2ieDj_Mul4s/edit?pref=2&pli=1

Review-Url: https://codereview.chromium.org/2195103002
Cr-Commit-Position: refs/heads/master@{#413565}

Former-commit-id: 21d7beb1e2c02a8103d23126cf22838241fe794d